2001-11-01  TAMURA Kent  <tkent@users.sourceforge.net>

	* include/objbase (CoGetClassObject): Change third parameter
	to COSERVERINFO*.

2001-10-30  Danny Smith  <dannysmith@users.sourceforge.net>

	* include/winuser.h (MOUSEEVENTF_WHEEL): Define.
	Thanks to: Kim Saunders.
	* include/oleauto.h: Define VARIANT* flags for VariantChangeType.
	Thanks to: Pat Thoyts.
	* include/winnt.h: Change C++ style comment to C style.
 	* include/shlobj.h: Ditto.
	* include/objbase.h (enum tagCOINIT): Remove comma at end of
	list.
	* include/oledlg.h (enum tagOLEUIPASTEFLAG): Ditto.
	* include/oleidl.h (enum tagDROPEFFECT): Mark as __extension__
	(enum not limited to range of int).
	* include/oaidl.h (struct tagVARIANT): Mark as __extension__
	(struct with no named members), ifndef NONAMELESSUNION. 

2001-10-30  Danny Smith  <dannysmith@users.sourceforge.net>

	* include/winuser.h (CREATESTRUCT): UNICODE it.
	(CBT_CREATEWND): Likewise.

2001-10-12  Pedro A Aranda  <paaguti@hotmail.com>

	* include/winuser.h (POINTSTOPOINT): Use explicit casts
	before extracting words.

2001-10-04  Danny Smith  <dannysmith@users.sourceforge.net>

	* include/winnt.h: Add PF_* defines.
	Thanks to: "Wizord"  <wizord@argoslabs.com>

2001-09-18  Danny Smith  <dannysmith@users.sourceforge.net>

	* include/winnt.h (_[U]LARGE_INTEGER): Mark nameless structure
	field as _ANONYMOUS_STRUCT.
	* include/setupapi.h (SP_DEVINSTALL_PARAMS): Add missing typedef
	for UNICODE.
	* include/ipexport.h (icmp_echo_reply): Remove extra ';'.
	* lib/makefile.in: Add -pedantic switch to TEST_OPTIONS for header
	test.
 
2001-09-17  Mattia Barbon  <mbarbon@dsi.unive.it>

	* include/commctrl.h: Add some ListView constants.

2001-09-17  Earnie Boyd  <earnie@sf.net>

	* lib/Makefile.in (inst_includedir): Add FIXME and remove the usr/
	portion of the directory from the install.
	(inst_libdir): Ditto.
	* Makefile.in (VERSION): Increment.
	* include/w32api.h: Increment version.

2001-09-13  Earnie Boyd  <earnie@SF.net>
